swagger edit, logs, readme
